<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile_header_item"
        android:title="@string/profile_subheader_title">
        <menu>
            <item
                android:id="@+id/profile"
                android:checkable="true"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile"/>
            <item
                android:id="@+id/settings"
                android:checkable="true"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>
        </menu>
    </item>

    <item
        android:id="@+id/information_header_item"
        android:title="@string/information_subheader_title">
        <menu>
            <item
                android:id="@+id/about_us_item"
                android:checkable="true"
                android:icon="@drawable/ic_about_us"
                android:title="@string/about_us"/>
            <item
                android:id="@+id/want_to_sell_item"
                android:checkable="true"
                android:icon="@drawable/ic_sell_with_us"
                android:title="@string/want_to_sell_with_us"/>
        </menu>
    </item>
</menu>