<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.intro.IntroFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/cookie"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/background_green_primary"
            android:textSize="@dimen/intro_screen_app_name_text_size"
            android:textStyle="bold" />

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password_sign_up"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:backgroundTint="@color/background_green_primary"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:backgroundTint="@color/white"
            android:text="@string/sign_up"
            android:textColor="@color/text_color_button_green"
            app:strokeColor="@color/background_green_primary"
            app:strokeWidth="2dp" />
    </LinearLayout>

</FrameLayout>