<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.sign_in.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_sign_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center_horizontal"
            android:text="@string/sign_in"
            android:textColor="@color/background_green_primary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cb_always_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/always_sing_in" />

        <Button
            android:id="@+id/btn_sign_in_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background_green_primary"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</FrameLayout>