<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.sign_up.SignUpFragment"
    android:layout_marginVertical="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/tv_title_sign_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:gravity="top|center_horizontal"
                android:text="@string/sign_up"
                android:textColor="@color/background_green_primary"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_register_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_message"
                android:gravity="center"
                android:textColor="@color/md_theme_light_secondary"
                android:layout_margin="8dp"
                />

            <!-- Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:imeOptions="actionNext" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Surname -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_surname"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/surname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Nickname -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_nickname"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/nickname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Age -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_age"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/age">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Orientation -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_orientation"
                style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/sexual_orientation">

                <AutoCompleteTextView
                    android:id="@+id/actv_orientation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- cell phone number -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_cell_phone_number"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/cell_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_cell_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password_sign_up"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Repeat password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_confirm_password_sign_up"
                style="?attr/textInputFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/confirm_password"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirm_password_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_sign_up_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:backgroundTint="@color/background_green_primary"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>