<?xml version="1.0" encoding="utf-8"?>
    <androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_actual_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/adress_dummy"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_location_green"
                android:contentDescription="@string/image_contentDescription"
               />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_shopping_cart_green"
                android:contentDescription="@string/image_contentDescription"
                />
            </LinearLayout>
            <com.google.android.material.search.SearchBar
                android:id="@+id/search_bar_main_activity"
                android:contentDescription="@string/search_bar_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_bar_hint"
                />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager_carousel"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                />
            <me.relex.circleindicator.CircleIndicator3
                android:id="@+id/circle_indicator_carousel"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/transparent"
                app:ci_drawable="@drawable/circle_indicator_green"
                />

            <androidx.fragment.app.FragmentContainerView
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:id="@+id/nav_host_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:navGraph="@navigation/nav_graph" />

        </LinearLayout>
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation_menu"
            app:menu="@menu/temp_reference_menu"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/header_navigation_menu"
            android:layout_gravity="start" />
    </androidx.drawerlayout.widget.DrawerLayout>